--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -84,6 +84,6 @@ jobs:
     - name: Deploy
       uses: azure/webapps-deploy@v2
       with:
-        app-name: StoreManagerApp
+        app-name: pawpers
         publish-profile: ${{secrets.AZURE_PAPWERS_PUBLISH_PROFILE}}
         package: Releases
