--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -6,8 +6,8 @@ on:
     
 env:
   AZURE_WEBAPP_NAME: pawpers-angular    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: './wk8-Angular/RestaurantReviewAngular/dist/RestaurantReviewAngular'      # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '12.x'                # set this to the node version to use
+  AZURE_WEBAPP_PACKAGE_PATH: './angular-pawpers'
+  NODE_VERSION: '14.x'                # set this to the node version to use
 
 jobs:
   build-and-deploy:
@@ -29,7 +29,7 @@ jobs:
         # deploy to Azure Web App.
         npm install
         npm run build --prod
-      working-directory: ./wk8-Angular/RestaurantReviewAngular/
+      working-directory: ./angular-pawpers
         
         
     - name: 'Deploy to Azure WebApp'
