--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -6,7 +6,7 @@ on:
     
 env:
   AZURE_WEBAPP_NAME: pawpers-angular    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: './angular-pawpers'
+  AZURE_WEBAPP_PACKAGE_PATH: './angular-pawpers/dist/angular-pawpers'
   NODE_VERSION: '14.x'                # set this to the node version to use
 
 jobs:
