--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -6,7 +6,7 @@ on:
     
 env:
   AZURE_WEBAPP_NAME: pawpers-angular    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: './dist/pawpers-angular'
+  AZURE_WEBAPP_PACKAGE_PATH: './'
   NODE_VERSION: '14.x'                # set this to the node version to use
 
 jobs:
