--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -29,7 +29,7 @@ jobs:
         # deploy to Azure Web App.
         npm install
         npm run build --prod
-      working-directory: ./angular-pawpers
+      working-directory: ./pawpers-angular
         
         
     - name: 'Deploy to Azure WebApp'
