--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   build-and-deploy:
     name: Build and Deploy
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     environment: Angular
     
     steps:
