--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,8 +13,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    
-    
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
@@ -65,7 +64,7 @@ jobs:
     
   deploy:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     environment:
       name: 'Production'
 
@@ -78,12 +77,6 @@ jobs:
 
     - name: Publish
       run: dotnet publish --configuration Release -o Releases
-      
-    - name: Upload sonarscanner report
-      uses: actions/upload-artifact@v2
-      with:
-        name: P2WebApi
-        path: ./publish
     
     - name: Deploy
       uses: azure/webapps-deploy@v2
