--- a/pawpers-angular/package.json
+++ b/pawpers-angular/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@auth0/auth0-angular": "^1.8.0",
+    "@ng-web-apis/common": "^1.12.1",
+    "@ng-web-apis/geolocation": "^1.0.4",
     "@petfinder/petfinder-js": "^1.0.6",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
