--- a/pawpers-angular/package.json
+++ b/pawpers-angular/package.json
@@ -22,6 +22,9 @@
     "@ng-web-apis/common": "^1.12.1",
     "@ng-web-apis/geolocation": "^1.0.4",
     "@petfinder/petfinder-js": "^1.0.6",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
