--- a/pawpers-angular/package.json
+++ b/pawpers-angular/package.json
@@ -23,6 +23,7 @@
     "@ng-web-apis/geolocation": "^1.0.4",
     "@petfinder/petfinder-js": "^1.0.6",
     "bootstrap": "^5.1.3",
+    "emailjs-com": "^3.2.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.4.0",
