--- a/pawpers-angular/angular.json
+++ b/pawpers-angular/angular.json
@@ -26,7 +26,9 @@
                             "src/favicon.ico",
                             "src/assets"
                         ],
-                        "styles": ["node_modules/bootstrap/dist/css/bootstrap.min.css"],
+                        "styles": ["src/assets/bootstrap.min.css",
+                            "src/styles.css"
+                        ],
                         "scripts": [
                             "node_modules/jquery/dist/jquery.min.js",
                             "node_modules/popper.js/dist/umd/popper.min.js",
@@ -92,10 +94,13 @@
                             "src/favicon.ico",
                             "src/assets"
                         ],
-                        "styles": [
+                        "styles": ["src/assets/bootstrap.min.css",
                             "src/styles.css"
                         ],
-                        "scripts": []
+                        "scripts": ["node_modules/jquery/dist/jquery.min.js",
+                            "node_modules/popper.js/dist/umd/popper.min.js",
+                            "node_modules/bootstrap/dist/js/bootstrap.min.js"
+                        ]
                     }
                 }
             }
